new Controller api